# mugen-dms

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Rocket.toml  diesel.toml  index.html
assets/: index.html
assets/js/: mugen.js  mugen_ui.js  mugen_ui_bg.wasm
backend/: .env.sample  .gitignore  Cargo.toml
backend/docker/: docker-compose.yml
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20221009_130143_categories.rs
backend/src/: error.rs  main.rs  services.rs
backend/src/config/: app.rs  db.rs
backend/src/handler/: categories.rs  docs.rs  mod.rs
backend/src/services/: categories.rs  docs.rs
common/: Cargo.toml
common/bindings/: Category.ts  Doc.ts  Docs.ts
common/src/: lib.rs
common/src/models/: category.rs  document.rs  documents.rs  mod.rs
docker/: docker-compose.yml
dyn-logger/: Cargo.toml  logging.toml.sample
dyn-logger/src/: lib.rs  logger.rs  utils.rs
frontend/: .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: api.rs  app.rs  lib.rs  main.rs
frontend/src/components/: chart.rs  grid.rs  mod.rs  sidebar.rs  upload.rs
frontend/src/routes/: about.rs  dashboard.rs  document.rs  home.rs  mod.rs
frontend/style/: styles.css
migrations/2021-01-29-004122_create_users/: up.sql
mugen-common/: Cargo.toml  docker-compose.yml
mugen-common/migrations/2021-01-29-004122_create_users/: up.sql
mugen-common/migrations/2021-01-29-012750_create_documents/: down.sql  up.sql
mugen-common/src/: lib.rs  models.rs  schema.rs
mugen-common/src/handler/: mod.rs
mugen-server/: .env.example  Cargo.toml  README.md  Rocket.toml  logging.toml  logging.toml.example
mugen-server/entity/: Cargo.toml
mugen-server/entity/src/: category.rs  docs.rs  document.rs  documents.rs  lib.rs  prelude.rs
mugen-server/entity/src/docs/: documents.rs
mugen-server/migration/: Cargo.toml
mugen-server/migration/src/: lib.rs  m20220101_000001_documents.rs  m20220214_000001_documents.rs  m20221009_130143_categories.rs
mugen-server/migrations/: 20220210160321_documents.down.sql  20220210160321_documents.up.sql
mugen-server/src/: error.rs  handler.rs  main.rs  services.rs
mugen-server/src/config/: app.rs  db.rs
mugen-server/src/controller/: auth_controller.rs  mod.rs
mugen-server/src/handler/: categories.rs  docs.rs  error.rs  mod.rs
mugen-server/src/models/: document.rs  mod.rs  schema.rs  user.rs
mugen-server/src/persistence/: schema.rs  utils.rs
mugen-server/src/persistence/migrations/2021-01-29-004122_create_users/: up.sql
mugen-server/src/persistence/models/: document.rs  user.rs
mugen-server/src/services/: auth_service.rs  categories.rs  docs.rs  helper.rs  mod.rs
mugen-server/src/utils/: cron.rs  logging.rs  mod.rs
mugen-ui/: Cargo.toml  Makefile  README.md  Trunk.toml  index.html  package.json  tailwind.config.js
mugen-ui/src/: lib.rs  main.rs
mugen-ui/src/components/: app.rs  composer.rs  content.rs  login.rs  mod.rs  navigation.rs  register.rs  router.rs
mugen-ui/src/models/: auth.rs
pages/: index.html
pages/static/css/: mugen.css
pages/static/js/: mugen.js
src/: app.rs  main.rs
static/: index.html
static/js/: mugen.js
