[package]
name = "mugen-backend"
version = "0.1.1"
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.6", features = ["macros", "http2"] }
dotenv = "0.15"
thiserror = "1.0"
tokio = { version = "1.28", default_features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
    "registry",
] }
tracing-attributes = "0.1"
tracing-appender = "0.2"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.4", default_features = false, features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.11", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "with-chrono",
], default-features = false }
anyhow = "1.0"
clap = { version = "4.3", features = ["derive", "env"] }
entity = { path = "entity" }
migration = { path = "migration" }
toml = "0.7"
tokio_schedule = "0.3"
common = { path = "../common" }
dyn-logger = "0.2"
async-trait = "0.1"
