[package]
name = "common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = "6.2", features = ["chrono-impl", "format"] }
