[package]
name = "mugen-server"
version = "0.1.0"
authors = ["koopa1338 <sinner1991@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
dotenv = "0.15"
thiserror = "1.0"
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
    "registry",
] }
tracing-attributes = "0.1"
tracing-appender = "0.2"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "with-chrono",
], default-features = false }
anyhow = "1.0"
clap = { version = "3.2", features = ["derive", "env"] }
entity = { path = "entity" }
migration = { path = "migration" }
toml = "0.6"
tokio_schedule = "0.3"
common = { path = "../common" }

[features]
yew-frontend = []
