[package]
name = "mugen-ui"
version = "0.1.0"
authors = ["koopa1338 <sinner1991@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
web-sys = { version = "0.3.51", features = ["HtmlElement", "HtmlInputElement", "Node"] }
yew = { version = "0.17.4", features = ["web_sys"] }
yew-router = { version = "0.14.0", features = ["web_sys"] }
