[package]
name = "migration"
version = "0.1.2"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
sea-orm-migration = { version = "0.12", features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
