[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.sea-orm]
version = "0.7.1"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres"
]
default-features = false
