[package]
name = "migration"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
sea-orm-migration = { version = "0.8.3", features = [ "runtime-tokio-native-tls", "sqlx-postgres" ] }
sea-orm = { version = "0.8.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
], default-features = false }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
