[package]
name = "migration"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
sea-orm-migration = { version = "0.10", features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
